logs/Slang/chapter-7/arrays/unpacked/operations.sv.log
name: operations-on-unpacked-arrays-rw
description: Test unpacked arrays operations support (R & W)
should_fail: 0
tags: 7.4.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/operations.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/operations.sv:12:8: error: language feature not yet supported
	arr = '{0, 0, 0, 0, 0, 0, 0, 0};
	      ^~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/operations.sv:16:8: error: language feature not yet supported
	arr = '{1, 1, 0, 1, 1, 1, 1, 0 };
	      ^~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/unpacked/operations.sv:20:8: error: language feature not yet supported
	arr = '{1, 0, 1, 0, 1, 1, 0, 1 };
	      ^~~~~~~~~~~~~~~~~~~~~~~~~~
